--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catalogues-library",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A library for searching library catalogues\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[DJavaScript library for searching library catalogues",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,6 @@
     "xml2js": "^0.4.23"
   },
   "engines": {
-    "node": "14-lts"
+    "node": "14.x"
   }
 }
