--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "catalogues-library",
-  "version": "1.0.1",
-  "description": "A library for searching library catalogues\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[DJavaScript library for searching library catalogues",
+  "version": "1.0.2",
+  "description": "A library for searching library catalogues",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
   },
   "engines": {
     "node": "14.x"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
