--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catalogues-library",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A library for searching library catalogues",
   "main": "index.js",
   "scripts": {
@@ -21,8 +21,11 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "axios-cookiejar-support": "^1.0.1",
+    "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
+    "https-browserify": "^1.0.0",
     "tough-cookie": "^4.0.0",
+    "util": "^0.12.4",
     "xml2js": "^0.4.23"
   },
   "engines": {
