--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "axios-cookiejar-support": "^1.0.1",
-    "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
-    "https": "^1.0.0",
-    "https-browserify": "^1.0.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "tough-cookie": "^4.0.0",
-    "util": "^0.12.4",
     "xml2js": "^0.4.23"
   },
   "engines": {
