--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "catalogues-library",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "A library for searching library catalogues",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "axios-cookiejar-support": "^1.0.1",
     "cheerio": "^1.0.0-rc.10",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "superagent": "^6.1.0",
     "tough-cookie": "^4.0.0",
     "xml2js": "^0.4.23"
   },
