--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "superagent": "^6.1.0",
     "tough-cookie": "^4.0.0",
+    "uuid": "^8.3.2",
     "xml2js": "^0.4.23"
   },
   "engines": {
