--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "catalogues-library",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A library for searching library catalogues",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "test-file": "jest --no-color 2>output.txt"
   },
   "repository": {
     "type": "git",
