--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   },
   "homepage": "https://github.com/LibrariesHacked/catalogues-library#readme",
   "dependencies": {
-    "@types/tough-cookie": "^4.0.1",
-    "async": "^3.2.2",
-    "cheerio": "^1.0.0-rc.10",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "superagent": "^6.1.0",
+    "@types/tough-cookie": "^4.0.2",
+    "async": "^3.2.4",
+    "cheerio": "^1.0.0-rc.12",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "superagent": "^8.0.0",
+    "syswide-cas": "^5.3.0",
     "tough-cookie": "^4.0.0",
     "uuid": "^8.3.2",
     "xml2js": "^0.4.23"
@@ -34,8 +35,8 @@
     "node": "14.x"
   },
   "devDependencies": {
-    "jest": "^27.4.7",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "jest": "^28.1.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
