--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "catalogues-library",
-  "version": "1.2.0",
-  "description": "A library for searching library catalogues",
+  "version": "1.2.1",
+  "description": "A JS library for searching library catalogues",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
