--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-polyfill-webpack-plugin": "^4.1.0",
     "superagent": "^10.2.1",
     "tough-cookie": "^5.1.2",
+    "user-agents": "^1.1.541",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   }
