--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "catalogues-library",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A JS library for searching library catalogues",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production",
     "test": "jest --runInBand",
     "test-ci": "jest --silent",
     "test-file": "jest --no-color 2>output.txt"
@@ -21,21 +19,17 @@
   },
   "homepage": "https://github.com/LibrariesHacked/catalogues-library#readme",
   "devDependencies": {
-    "jest": "^29.7.0",
-    "webpack": "^5.99.8",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "@small-tech/syswide-cas": "^6.0.2",
     "@types/tough-cookie": "^4.0.5",
     "async": "^3.2.6",
-    "cheerio": "^1.0.0",
+    "cheerio": "^1.1.2",
     "cycletls": "^1.0.27",
-    "node-polyfill-webpack-plugin": "^4.1.0",
-    "superagent": "^10.2.1",
+    "superagent": "^10.2.3",
     "tough-cookie": "^5.1.2",
-    "user-agents": "^1.1.541",
+    "user-agents": "^1.1.669",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
   }
