--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "catalogues-library",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "A JS library for searching library catalogues",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest --runInBand",
-    "test-ci": "jest --silent",
-    "test-file": "jest --no-color 2>output.txt"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
+    "test-ci": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --silent",
+    "test-file": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --no-color 2>output.txt"
+  },
+  "jest": {
+    "transform": {},
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,18 +26,17 @@
   },
   "homepage": "https://github.com/LibrariesHacked/catalogues-library#readme",
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "jest": "^29.7.0"
   },
   "dependencies": {
     "@small-tech/syswide-cas": "^6.0.2",
-    "@types/tough-cookie": "^4.0.5",
     "async": "^3.2.6",
     "cheerio": "^1.1.2",
-    "cycletls": "^1.0.27",
+    "cycletls": "^2.0.5",
     "superagent": "^10.2.3",
-    "tough-cookie": "^5.1.2",
     "user-agents": "^1.1.669",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "xml2js": "^0.6.2"
   }
 }
